star DOM links fixed

--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,13 @@
     <hr class="uk-divider-icon" uk-scrollspy="cls:uk-animation-grow">
     <div class="uk-container" uk-scrollspy="target: > div; cls:uk-animation-slide-top-small; delay: 300">
         <div class="user-library-container">
-            Library
-            <p>User categories: All saved articles(sort by saves vs date added) AND saved workflows.</p>
+            <h2>User Library</h2>
+            <div class="category-dropdown">
+                <select name="" id="user-category-dropdown"></select>
+            </div>
+            <div class="user-library">
+
+            </div>
         </div>
 
         <div class="library-container">
