polish login form and splash page

--- a/public/index.html
+++ b/public/index.html
@@ -51,22 +51,21 @@
 
     <div id="landing">
         <div class="uk-position-center">
-            <h1 class="title uk-animation-fade"><span><img src="./assets/images/lapiconDARKblue.png" id="laptop"></span>Dev<span
+            <h1 class="title uk-animation-fade uk-animation-slow"><span><img src="./assets/images/lapiconRED.png" id="laptop"></span>Dev<span
                     id="lab">Lab</span></h1>
-            <p class = "landing-text uk-text-center">Brewing up developers.</p>
-            <div id="login-prompts">
-                <form class="uk-form-stacked" action="" id="login">
-                    <h5 class="landing-text uk-text-center">Login to DevLab: </h5>
-                    <input class="uk-input uk-width-1-2 uk-align-center" id='username'
-                        type="text" placeholder="Username">
-                    <!-- <label class="uk-form-label uk-text-center" for="password">Password: </label> -->
-                    <input class="uk-input uk-width-1-2 uk-align-center"
-                        id='password' type="password" placeholder="Password">
-                </form>
-            </div>
-            <input class="uk-button" type="submit" id='submit-login' value="Login">
-            <input class="uk-button" type="button" value="Sign Up" id='sign-up-button' href="#sign-up-prompt" uk-toggle>
+            <p class="landing-text uk-text-center">Brewing up developers, one lesson at a time.</p>
+
+            <form class="uk-form-stacked" action="" id="login">
+                <!-- <h5 class="landing-text uk-text-center">Login to DevLab: </h5> -->
+                <input class="uk-input uk-width-1-2 uk-align-center" id='username' type="text" placeholder="Username">
+                <!-- <label class="uk-form-label uk-text-center" for="password">Password: </label> -->
+                <input class="uk-input uk-width-1-2 uk-align-center" id='password' type="password" placeholder="Password">
+                <input class="uk-button uk-width-1-2 uk-align-center" type="submit" id='submit-login' value="Login">
+                <input class="uk-button uk-width-1-2 uk-align-center" type="button" value="Sign Up" id='sign-up-button' href="#sign-up-prompt"
+                    uk-toggle>
+            </form>
         </div>
+        <p>Scroll</p>
     </div>
 
     </div>
@@ -175,6 +174,10 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
+
+
+
+
 
 
 
