--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="uk-offcanvas-content">
-    <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-hidden; top: 300">
+    <div id='navbar' uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky;">
         <nav class=" uk-navbar-container uk-animation-slide-top" uk-navbar style="position: relative; z-index: 980;">
             <div class="uk-navbar-left uk-margin-left">
                 <ul class="uk-navbar-nav">
@@ -31,11 +31,10 @@
                 </ul>
             </div>
             <div class="uk-navbar-right">
-                    <!-- Login: <input class="uk-input uk-width-1-4" id='username' type="text">
+                <!-- Login: <input class="uk-input uk-width-1-4" id='username' type="text">
                     Password: <input class="uk-input uk-width-1-4" id='password' type="password"> -->
-                    <a class="uk-button" href="#" uk-scroll>Login</a>
-                    <button class="uk-button" type="button" value="Sign Up" href="#sign-up-prompt"
-                        uk-toggle>Sign-Up</button>
+                <a class="uk-button" href="#" uk-scroll>Login</a>
+                <button class="uk-button" type="button" value="Sign Up" href="#sign-up-prompt" uk-toggle>Sign-Up</button>
 
             </div>
         </nav>
@@ -49,8 +48,8 @@
 
     <div id="landing">
         <div class="uk-position-center">
-            <h1 class="title uk-animation-fade uk-animation-slow"><span><img src="./assets/images/laptop2.png" id="laptop"></span><span><img src="./assets/images/vial.png" id="vial"></span>Dev<span
-                    id="lab">Lab</span></h1>
+            <h1 class="title uk-animation-fade uk-animation-slow"><span><img src="./assets/images/laptop2.png" id="laptop"></span><span><img
+                        src="./assets/images/vial.png" id="vial"></span>Dev<span id="lab">Lab</span></h1>
             <p class="landing-text uk-text-center">Brewing up developers, one lesson at a time.</p>
 
             <form class="uk-form-stacked uk-animation-slide-top-small" action="" id="login">
@@ -58,11 +57,13 @@
                 <input class="uk-input uk-width-1-2 uk-align-center" id='username' type="text" placeholder="Username">
                 <input class="uk-input uk-width-1-2 uk-align-center" id='password' type="password" placeholder="Password">
                 <input class="uk-button uk-width-1-2 uk-align-center" type="submit" id='submit-login' value="Login">
-                <input class="uk-button uk-width-1-2 uk-align-center" type="button" value="Sign Up" id='sign-up-button' href="#sign-up-prompt" uk-toggle>
+                <input class="uk-button uk-width-1-2 uk-align-center" type="button" value="Sign Up" id='sign-up-button'
+                    href="#sign-up-prompt" uk-toggle>
             </form>
         </div>
         <!-- <a href = "#full-library" class = "uk-position-bottom-center" id = "scroller" uk-scroll>SCROLL</a> -->
-        <a href = "#full-library" uk-scroll><span uk-icon="icon: triangle-down; ratio: 3.5" class = "uk-position-bottom-center" id = "scroller"></span></a>
+        <a href="#full-library" uk-scroll><span uk-icon="icon: triangle-down; ratio: 3.5" class="uk-position-bottom-center"
+                id="scroller"></span></a>
     </div>
 
     </div>
@@ -111,7 +112,8 @@
                 </div>
             </div>
         </div>
-        <button class="uk-button uk-button-danger uk-align-center uk-width-1-1" type="button" uk-toggle="target: #add-content-slider">Add
+        <button id='add-content-button' class="uk-button uk-button-danger uk-align-center uk-width-1-1" type="button"
+            uk-toggle="target: #add-content-slider">Add
             Content</button>
 
     </div>
@@ -172,7 +174,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
 
-        </script>
+    </script>
     <script src='./assets/js/landing.js'></script>
     <script src='./assets/js/main.js'></script>
 </body>
