--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 <body class="uk-offcanvas-content">
     <div id='navbar' uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky;">
         <nav class=" uk-navbar-container uk-animation-slide-top" uk-navbar style="position: relative; z-index: 980;">
-            <div class="uk-navbar-left uk-margin-left">
+            <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
                     <li class="uk-button" id='user-library-link'>My Library</li>
                     <li class="uk-button active" id='full-library-link'>Full Library</li>
