--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-
+    <!-- Moment.JS -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js'></script>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.16/css/uikit.min.css" />
 
@@ -30,11 +31,12 @@
                     <li class="uk-button active" id='full-library-link'>Full Library</li>
                 </ul>
             </div>
-            <div class="uk-navbar-right">
+            <div class="uk-navbar-right" id="nav-right">
                 <!-- Login: <input class="uk-input uk-width-1-4" id='username' type="text">
                     Password: <input class="uk-input uk-width-1-4" id='password' type="password"> -->
-                <a class="uk-button" href="#" uk-scroll>Login</a>
-                <button class="uk-button" type="button" value="Sign Up" href="#sign-up-prompt" uk-toggle>Sign-Up</button>
+                <a class="uk-button" href="#" id="login-link" uk-scroll>Login</a>
+                <button class="uk-button" type="button" value="Sign Up" href="#sign-up-prompt" id="sign-up-nav-button"
+                    uk-toggle>Sign-Up</button>
 
             </div>
         </nav>
@@ -88,7 +90,7 @@
             </div>
             <div class="content-container">
                 <h2 class="uk-text-center">Content</h2>
-                <div class="content-item-container" uk-scrollspy="target: > ul; cls:uk-animation-slide-right-medium; delay: 300">
+                <div class="content-item-container">
                     <!-- 
                         <ul uk-accordion>
                         <li>
