--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <body class="uk-offcanvas-content">
     <div id='navbar' uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky;">
         <nav class=" uk-navbar-container uk-animation-slide-top" uk-navbar style="position: relative; z-index: 980;">
-            <div class="uk-navbar-left uk-margin-left">
+            <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
                     <li class="uk-button" id='user-library-link'>My Library</li>
                     <li class="uk-button active" id='full-library-link'>Full Library</li>
@@ -50,8 +50,11 @@
 
     <div id="landing">
         <div class="uk-position-center">
-            <h1 class="title uk-animation-fade uk-animation-slow"><span><img src="./assets/images/laptop2.png" id="laptop"></span><span><img
-                        src="./assets/images/vial.png" id="vial"></span>Dev<span id="lab">Lab</span></h1>
+            <h1 class="title uk-animation-fade uk-animation-slow"><span>
+                        <img src="./assets/images/laptop2.png" id="laptop">
+                        <img src="./assets/images/laptop.png" id="laptopred">
+                </span>
+                Dev<span id="lab">Lab</span></h1>
             <p class="landing-text uk-text-center">Brewing up developers, one lesson at a time.</p>
 
             <form class="uk-form-stacked uk-animation-slide-top-small" action="" id="login">
