reconstruct User Library layout

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
         <div class="user-library-container">
             <h2>User Library</h2>
             <div class="category-dropdown">
-                <select name="" id="user-category-dropdown"></select>
+                <select class = "uk-select" name="" id="user-category-dropdown"></select>
             </div>
             <div class="user-library">
 
