show welcome screen to user

--- a/public/index.html
+++ b/public/index.html
@@ -76,12 +76,12 @@
             </form>
         </div>
         <!-- <a href = "#full-library" class = "uk-position-bottom-center" id = "scroller" uk-scroll>SCROLL</a> -->
-        <a href="#main-content" uk-scroll><span uk-icon="icon: triangle-down; ratio: 3.5" class="uk-position-bottom-center"
+        <a href="#content-divider" uk-scroll><span uk-icon="icon: triangle-down; ratio: 3.5" class="uk-position-bottom-center"
                 id="scroller"></span></a>
     </div>
 
     </div>
-    <hr class="uk-divider-icon" uk-scrollspy="cls:uk-animation-scale-up">
+    <hr class="uk-divider-icon" uk-scrollspy="cls:uk-animation-scale-up" id="content-divider">
     <div id = "main-content" class="uk-container" uk-scrollspy="target: > div; cls:uk-animation-slide-top-small; delay: 300">
         <div class="user-library-container">
             <h2>User Library</h2>
