function created to create user content

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <!-- jsCookie-->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
+    <!-- jsCookie-->
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -68,7 +71,7 @@
 
             <form class="uk-form-stacked uk-animation-slide-top-small" action="" id="login">
                 <!-- <h5 class="landing-text uk-text-center">Login to DevLab: </h5> -->
-                <input class="uk-input uk-width-1-2 uk-align-center" id='username' type="text" placeholder="Username">
+                <input class="uk-input uk-width-1-2 uk-align-center" id='username' type="text" placeholder="Email">
                 <input class="uk-input uk-width-1-2 uk-align-center" id='password' type="password" placeholder="Password">
                 <input class="uk-button uk-width-1-2 uk-align-center" type="submit" id='submit-login' value="Login">
                 <input class="uk-button uk-width-1-2 uk-align-center" type="button" value="Sign Up" id='sign-up-button'
