--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,8 @@
             <h2>User Library</h2>
             <div class="category-dropdown">
                 <select class="uk-select" name="" id="user-category-dropdown"></select>
+                <button class="uk-active uk-button" uk-filter-control="sort: data-date"><a href="#">Ascending</a></button>
+                <button class = "uk-button" uk-filter-control="sort: data-date; order: desc"><a href="#">Descending</a></button>
             </div>
             <div class="user-library">
 
@@ -188,6 +190,8 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
+
+
 
         </script>
     <script src='./assets/js/landing.js'></script>
