--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
             <p class="landing-text uk-text-center">Brewing up developers, one lesson at a time.</p>
 
             <form class="uk-form-stacked uk-animation-slide-top-small" action="" id="login">
-                <input class="uk-input uk-width-1-2 uk-align-center" id='username' type="text" placeholder="Username">
+                <input class="uk-input uk-width-1-2 uk-align-center" id='username' type="text" placeholder="Email">
                 <input class="uk-input uk-width-1-2 uk-align-center" id='password' type="password" placeholder="Password">
                 <input class="uk-button uk-width-1-2 uk-align-center" type="submit" id='submit-login' value="Login">
                 <input class="uk-button uk-width-1-2 uk-align-center" type="button" value="Sign Up" id='sign-up-button'
@@ -167,12 +167,12 @@
             </div>
             <div class="uk-modal-body">
                 <form class="uk-form" action="">
-                    <label class="uk-form-label" for="userName">Username: </label>
+                    <label class="uk-form-label" for="userName">Name: </label>
                     <input class="uk-input" name='userName' type="text" required>
-                    <label class="uk-form-label" for="userPassword">Password: </label>
-                    <input class="uk-input" name='userPassword' type="password" required>
                     <label class="uk-form-label" for="userEmail">Email : </label>
                     <input class="uk-input" name='userEmail' type="text" required>
+                    <label class="uk-form-label" for="userPassword">Password: </label>
+                    <input class="uk-input" name='userPassword' type="password" required>
                 </form>
                 <p id="sign-up-error" class="uk-text-danger uk-text-center">All fields must be submitted!</p>
                 <p id="sign-up-error-email" class="uk-text-danger uk-text-center">Submit a valid e-mail address!</p>
