--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>DevLab</title>
 </head>
 
 <body class="uk-offcanvas-content">
@@ -82,12 +82,13 @@
     </div>
     <hr class="uk-divider-icon" uk-scrollspy="cls:uk-animation-scale-up" id="content-divider">
     <div id="main-content" class="uk-container" uk-scrollspy="target: > div; cls:uk-animation-slide-top-small; delay: 300">
-        <div class="user-library-container" >
+        <div class="user-library-container">
             <h2>User Library</h2>
-            <div class="category-dropdown" >
+            <div class="category-dropdown">
                 <select class="uk-select" name="" id="user-category-dropdown"></select>
-                <button id= 'date-sort'class="uk-active uk-button" uk-filter-control="sort: data-date; order: desc"><a href="#">By Date</a></button>
-                <button id = 'save-sort'class = "uk-button" uk-filter-control="sort: data-saves; order: asc"><a href="#">Popularity</a></button>
+                <button id='date-sort' class="uk-active uk-button" uk-filter-control="sort: data-date; order: desc"><a
+                        href="#">By Date</a></button>
+                <button id='save-sort' class="uk-button" uk-filter-control="sort: data-saves; order: asc"><a href="#">Popularity</a></button>
             </div>
             <div class="user-library">
 
@@ -189,11 +190,11 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous">
+        crossorigin="anonymous"> </script>
 
-        </script>
     <script src='./assets/js/landing.js'></script>
     <script src='./assets/js/main.js'></script>
+
 </body>
 
 </html>
