--- a/public/index.html
+++ b/public/index.html
@@ -156,10 +156,10 @@
                         <label class="uk-form-label" for="new-desc">Description: </label>
                         <textarea class="uk-textarea" type="text" id='new-desc'></textarea>
 
-                        <div class="uk-alert uk-alert-danger" id="add-error" class="uk-text-center" uk-alert>
+                        <div class="uk-alert uk-button-danger" id="add-error" class="uk-text-center" uk-alert>
                             <button class="uk-alert-close" type="button" uk-close></button>
                             <p>All fields must be submitted!</p></div>
-                        <div class="uk-alert uk-alert-danger" id="add-error-URL" class="uk-text-center" uk-alert>
+                        <div class="uk-alert uk-button-danger" id="add-error-URL" class="uk-text-center" uk-alert>
                             <button class="uk-alert-close" type="button" uk-close></button>
                             <p>Please submit a valid URL!</p></div>
                         <div class="uk-alert uk-alert-success" id="add-success" class="uk-text-center" uk-alert>
