--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
     </div>
 
     <div id = "footer">
-        <hr class="uk-divider-icon" uk-scrollspy="cls:uk-animation-scale-up">
+        <hr class="uk-divider-icon" uk-scrollspy="cls:uk-animation-scale-up uk-animation-slow">
         <p id = "footer-text" class="uk-text-center"><span ><a id="github" href = "https://github.com/sajeelmalik/Dev-Lab"><i class="fab fa-github"></i> Github </a>|</span> Developed in San Francisco, CA © 2018 DevLab</p>
     </div>
 
