fix certain responsive landing elements

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,10 @@
                     <img src="./assets/images/laptop2.png" id="laptop">
                     <img src="./assets/images/laptop.png" id="laptopred">
                 </span>
-                Dev<span id="lab">Lab</span></h1>
+                <span>
+                    Dev<span id="lab">Lab</span>
+                </span>
+                </h1>
             <p class="landing-text uk-text-center">Brewing up developers, one lesson at a time.</p>
 
             <form class="uk-form-stacked uk-animation-slide-top-small" action="" id="login">
@@ -210,10 +213,10 @@
     </div>
     </div>
 
-    <div id = "footer">
+    <footer id = "footer">
         <hr class="uk-divider-icon" uk-scrollspy="cls:uk-animation-scale-up uk-animation-slow">
         <p id = "footer-text" class="uk-text-center"><span ><a id="github" href = "https://github.com/sajeelmalik/Dev-Lab"><i class="fab fa-github"></i> Github </a>|</span> Developed in San Francisco, CA © 2018 DevLab</p>
-    </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"> </script>
